# robbie-cse571

./: .env  CLAUDE.md  README.md  analyze_dataset.py  calibrate.py  config.yaml  gather.sh  inference.py  inference.sh  monitor.py  plot_variance.py  pyproject.toml  relax.py  relax.sh  replay.sh  reset.py  reset.sh  teleoperate.py  test_motors.py  train.sh
.claude/: settings.local.json
camera_web/: app.py
checkpoints/ep10/pretrained_model/: config.json  model.safetensors  train_config.json
checkpoints/ep10/training_state/: optimizer_state.safetensors  rng_state.safetensors
checkpoints/ep25/pretrained_model/: config.json  model.safetensors  policy_postprocessor.json  policy_preprocessor.json  policy_preprocessor_step_3_normalizer_processor.safetensors  train_config.json
checkpoints/ep25/training_state/: optimizer_state.safetensors  rng_state.safetensors
checkpoints/ep5/pretrained_model/: config.json  model.safetensors  policy_postprocessor_step_0_unnormalizer_processor.safetensors  train_config.json
checkpoints/ep5/training_state/: optimizer_state.safetensors  rng_state.safetensors
outputs/train/act_so101_test/wandb/: latest-run
outputs/train/act_so101_test/wandb/run-20260128_163126-25116ssa/: run-25116ssa.wandb
outputs/train/act_so101_test/wandb/run-20260128_163126-25116ssa/files/: config.yaml  requirements.txt  wandb-metadata.json
